chore: fixed test cases and added comment